#163518698 Filter the articles(get a list of articles that match the search parameters) (#46)
* [Feature #163518698] filter articles by[favorited, author, and/or tag]

* [Feature #163518698] add swuagger documentation

* [Feature #163518698] fix the eslint rule issues

* [Feature #163518698] apply @esuka's feedback

* [Feature #163518698] change some messages to be meaningful @esuka feedback

* [Feature #163518698] apply removed useless validations @esuka's feedback

* [Feature #163518698] fix the codeclimate issue
